# po-invoice-remediation-crew

./: README.md  pyproject.toml
src/: pyproject.toml
src/po_invoice_discrepancy_analyzer/: crew.py  main.py
src/po_invoice_discrepancy_analyzer/config/: agents.yaml  extract_invoice_text.json  extract_po_text.json  tasks.yaml
src/po_invoice_discrepancy_analyzer/tools/: __init__.py  custom_tool.py  textract_tool.py
