[project]
name = "po_invoice_discrepancy_analyzer"
version = "0.1.0"
description = "po_invoice_discrepancy_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
    "jambo",
    "markitdown[all]>=0.0.2",
]

[project.scripts]
po_invoice_discrepancy_analyzer = "po_invoice_discrepancy_analyzer.main:run"
run_crew = "po_invoice_discrepancy_analyzer.main:run"
train = "po_invoice_discrepancy_analyzer.main:train"
replay = "po_invoice_discrepancy_analyzer.main:replay"
test = "po_invoice_discrepancy_analyzer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv.workspace]
members = [
    "src",
]
